little changes + drag and drop

--- a/dino_game.html
+++ b/dino_game.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nezuko Adventures</title>
     <link rel="stylesheet" href="/dino_game.css">
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
+    <center>
+    <h2>Nezuko's Adventures</h2>
+<button class="button button1">PLAY</button>
+<button class="button button2">SCORES</button>
+</center>
+
     <div class ="canvas">
+      <div class="score">00000</div>  
       <div id="nezuko"></div>
       <div id="obstacle"></div>
     </div>
