dragndrop falmost finish + location finish

--- a/dino_game.html
+++ b/dino_game.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nezuko Adventures</title>
     <link rel="stylesheet" href="/dino_game.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="shortcut icon" href="#" />
   </head>
   <body>
+    </head>
+    <body>
     <center>
     <h2>Nezuko's Adventures</h2>
-<button class="button button1">PLAY</button>
-<button class="button button2">SCORES</button>
 </center>
 
     <div class ="canvas">
@@ -20,6 +21,14 @@
       <div id="obstacle"></div>
     </div>
   <script src="/jeu.js"></script>
+
+  <div class="container">
+    <h1 class="status"></h1>
+    <button class="find-state">LOCATION</button>
+    <button class="find-state">PLAY</button>
+    <button class="find-state">SCORES</button>
+  </div>
+  <script src="/location.js"></script>
   </body>
 </html>
 
