--- a/dragdrop.html
+++ b/dragdrop.html
@@ -22,9 +22,7 @@
     <div class="fill" id="icon2" draggable="true"></div>
   </div>
 
-  <div class="empty">
-    <div id="icon3" draggable="true"></div>
-  </div> 
+  <div class="empty" id="emptyBox"></div> 
 
   <script src="/dragdrop.js"></script>
   </body>
