--- a/dino_game.html
+++ b/dino_game.html
@@ -6,32 +6,38 @@
     <title>Nezuko Adventures</title>
     <link rel="stylesheet" href="/dino_game.css">
     <link rel="shortcut icon" href="#" />
+    <link href="http://fonts.cdnfonts.com/css/amarillreg'" rel="stylesheet">
+          
+
+<style>
+ @import url('http://fonts.cdnfonts.com/css/amarillreg');
+</style>
+                
   </head>
-  <body>
+  <body bgcolor="#f9e79f">
     </head>
     <center>
-<<<<<<< HEAD
-    <h2>Nezuko's Adventures</h2>
+    <h2 class="game_title">Nezuko's Adventures</h2>
+    <div class="location_div">
+      <h1 class="status"></h1>
+      <button class="find-state">LOCATION</button>
+    </div>
+      <button class="find-state">PLAY</button>
+      <button class="find-state">SCORES</button>
+    <script src="/location.js"></script>
 </center>
-=======
-      <h2>Nezuko's Adventures</h2>
-    </center>
-
->>>>>>> aebd2830c7e6460e28bb3c9d54b454a899d7566a
+<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    </form>
+    </div>
     <div class ="canvas">
       <div class="score">00000</div>  
       <div id="nezuko"></div>
       <div id="obstacle"></div>
     </div>
   <script src="/jeu.js"></script>
-
-  <div class="container">
-    <h1 class="status"></h1>
-    <button class="find-state">LOCATION</button>
-    <button class="find-state">PLAY</button>
-    <button class="find-state">SCORES</button>
-  </div>
-  <script src="/location.js"></script>
   </body>
 </html>
 
