sounds, start page beginning

--- a/dino_game.html
+++ b/dino_game.html
@@ -6,37 +6,27 @@
     <title>Nezuko Adventures</title>
     <link rel="stylesheet" href="/dino_game.css">
     <link rel="shortcut icon" href="#" />
-    <link href="http://fonts.cdnfonts.com/css/amarillreg'" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/fundead-bb'" rel="stylesheet">
           
 
 <style>
- @import url('http://fonts.cdnfonts.com/css/amarillreg');
+ @import url('http://fonts.cdnfonts.com/css/fundead-bb');
 </style>
                 
   </head>
   <body bgcolor="#f9e79f">
     </head>
+    <embed src="/img/demon_slayer2.mp3" loop="true" autostart="true" width="2" height="0">
     <center>
     <h2 class="game_title">Nezuko's Adventures</h2>
-    <div class="location_div">
-      <h1 class="status"></h1>
-      <button class="find-state">LOCATION</button>
-    </div>
-      <button class="find-state">PLAY</button>
-      <button class="find-state">SCORES</button>
-    <script src="/location.js"></script>
-</center>
-<div class="container">
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-    </form>
-    </div>
+    </center> 
+
     <div class ="canvas">
       <div class="score">00000</div>  
       <div id="nezuko"></div>
       <div id="obstacle"></div>
     </div>
+
   <script src="/jeu.js"></script>
   </body>
 </html>
