start-page, hall of fame, etc

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nezuko Adventures</title>
-    <link rel="stylesheet" href="/dino_game.css">
+    <link rel="stylesheet" href="/game.css">
     <link rel="shortcut icon" href="#" />
     <link href="http://fonts.cdnfonts.com/css/fundead-bb'" rel="stylesheet">
           
@@ -18,7 +18,8 @@
     </head>
     <embed src="/img/demon_slayer2.mp3" loop="true" autostart="true" width="2" height="0">
     <center>
-    <h2 class="game_title">Nezuko's Adventures</h2>
+    <h2 class="game_title">Demon Slayer Adventures</h2>
+    <h3 class="game_instruction">You must avoid the demon !</h3>
     </center> 
 
     <div class ="canvas">
