--- a/DragdropCR.html
+++ b/DragdropCR.html
@@ -6,13 +6,25 @@
     <title>Nezuko Adventures</title>
     <link rel="stylesheet" href="/DragdropCR.css">
     <link rel="shortcut icon" href="#" />
+    <link href="'http://fonts.cdnfonts.com/css/depixel'" rel="stylesheet">
+                
+          
+    <style>
+           @import url('http://fonts.cdnfonts.com/css/depixel');
+   </style>
+
+
   </head>
   <body>
     <center>
     <h2>Nezuko's Adventures</h2>
 </center>
 
-<h3>Insert your player in the empty box</h3>
+</head>
+<body background="/img/front_page.jpg">
+  </head>
+
+<h3 class="dragdrop_title">Insert your player in the empty box</h3>
 
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
     <img src="/img/nezuko_walking.png" draggable="true" ondragstart="drag(event)" id="drag1" width="100" height="100"></img>
