--- a/start_page.html
+++ b/start_page.html
@@ -38,15 +38,19 @@
     <center>
       <h3 class="dragdrop_title">Insert your player in the empty box</h3>
 
-<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-    <img src="/img/nezuko_walking.png" draggable="true" ondragstart="drag(event)" id="drag1" width="100" height="100"></img>
-</div>
+      <div id="div0">
+        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
+          <img src="/img/nezuko_walking.png" draggable="true" ondragstart="drag(event)" id="drag1" width="100" height="100"></img>
+      </div>
 
-<div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)">
-    <img src="/img/zenitsu.png" draggable="true" ondragstart="drag(event)" id="drag2" width="100" height="100"></img>
-</div>
+      <div id="div3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+      
+      <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)">
+          <img src="/img/zenitsu.png" draggable="true" ondragstart="drag(event)" id="drag2" width="100" height="100"></img>
+      </div>
+      
+      </div>
 
-<div id="div3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
   <script src="/DragdropCR.js"></script>
     </center>
