--- a/game.html
+++ b/game.html
@@ -16,9 +16,10 @@
   </head>
   <body bgcolor="#f9e79f">
     </head>
-    <embed src="/img/demon_slayer2.mp3" loop="true" autostart="true" width="2" height="0">
+    <!-- <embed src="/img/demon_slayer2.mp3" loop="true" autostart="true" width="2" height="0"> -->
     <center>
     <h2 class="game_title">Demon Slayer Adventures</h2>
+    
     <h3 class="game_instruction">You must avoid the demon !</h3>
     </center> 
 
