--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
   </head>
   <body bgcolor="#f9e79f">
     </head>
-    <!-- <embed src="/img/demon_slayer2.mp3" loop="true" autostart="true" width="2" height="0"> -->
+    <embed id="game_sound" src="/img/demon_slayer2.mp3" loop="true" autostart="true" width="2" height="0">
     <center>
     <h2 class="game_title">Demon Slayer Adventures</h2>
     
