--- a/start_page.html
+++ b/start_page.html
@@ -16,6 +16,7 @@
  @import url('http://fonts.cdnfonts.com/css/depixel');
 </style>
                 
+
   </head>
   <body background="/img/front_page.jpg">
     </head>
@@ -36,6 +37,12 @@
 
 
     <center>
+      <div> 
+      <input type="text" id="fname" name="fname" placeholder="Enter your name"><br>
+  </div>
+  </center>
+
+    <center>
       <h3 class="dragdrop_title">Insert your player in the empty box</h3>
 
       <div id="div0">
@@ -48,9 +55,9 @@
       <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)">
           <img src="/img/zenitsu.png" draggable="true" ondragstart="drag(event)" id="drag2" width="100" height="100"></img>
       </div>
-      
-
       </div>
+
+      <a class="find-state" role="button" href="surprise(jquery).html">SURPRISE</a>
 
 
   <script src="/DragdropCR.js"></script>
