--- a/start_page.html
+++ b/start_page.html
@@ -31,7 +31,7 @@
     </div>
     <script src="/location.js"></script>
 
-      <a class="find-state" role="button" href="game.html">PLAY</a>
+      <a class="find-state" role="button" href="game.html" onclick="play()">PLAY</a>
       <a class="find-state" role="button" href="hall_of_fame.html">SCORES</a>
     </center>
 
@@ -47,13 +47,13 @@
 
       <div id="div0">
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-          <img src="/img/nezuko_walking.png" draggable="true" ondragstart="drag(event)" id="drag1" width="100" height="100"></img>
+          <img src="/img/nezuko_walking.png" draggable="true" ondragstart="drag(event)" id="/img/nezuko_walking.png" width="100" height="100"></img>
       </div>
 
       <div id="div3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
       
       <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)">
-          <img src="/img/zenitsu.png" draggable="true" ondragstart="drag(event)" id="drag2" width="100" height="100"></img>
+          <img src="/img/zenitsu.png" draggable="true" ondragstart="drag(event)" id="/img/zenitsu.png" width="100" height="100"></img>
       </div>
       </div>
 
