--- a/surprise(jquery).html
+++ b/surprise(jquery).html
@@ -13,8 +13,7 @@
 <style>
  @import url('http://fonts.cdnfonts.com/css/fundead-bb');
  @import url('http://fonts.cdnfonts.com/css/depixel');
-</style>
-                
+</style>            
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
@@ -26,13 +25,23 @@ $(document).ready(function(){
     $("img").show();
   });
 });
-</script>
+
+$(document).ready(function(){
+    $("button").click(function(){
+      $("#p1").css("color", "red")
+        .slideUp(2000)
+        .slideDown(2000);
+    });
+  });
+
+  </script>
+
 </head>
 <body>
 
 
 <center>
-<h1 class="game_title">Click on me if you dare...</h1>
+<h1 class="game_title">hi my friend...</h1>
 
 <div>
 <button class="find-state" id="hide">Hide</button>
@@ -40,6 +49,12 @@ $(document).ready(function(){
 </div>
 
 <img src="/img/bear.png" height="500" width="800">
+</center>
+
+<center>
+<p id="p1">Cristiana is the best</p>
+
+<button class="find-state">Click me</button>
 </center>
 
 </body>
