--- a/surprise(jquery).html
+++ b/surprise(jquery).html
@@ -28,7 +28,7 @@ $(document).ready(function(){
 
 $(document).ready(function(){
     $("button").click(function(){
-      $("#p1").css("color", "red")
+      $("#p1").css("color", "green")
         .slideUp(2000)
         .slideDown(2000);
     });
