--- a/game.html
+++ b/game.html
@@ -24,7 +24,13 @@
     </center> 
 
     <div class ="canvas">
-      <div class="score">00000</div>  
+      <div class="score">00000</div> 
+      <div id="chrono">
+        <span >0 h</span> :
+        <span >0 min</span> :
+        <span >0 s</span> :
+        <span >0 ms</span>
+      </div> 
       <div id="nezuko"></div>
       <div id="obstacle"></div>
     </div>
