--- a/hall_of_fame.html
+++ b/hall_of_fame.html
@@ -34,50 +34,36 @@
       </tr>
     </thead>
 
-    <tbody>
-      <tr>
+    <tbody id="tableBody">
+      <!-- <tr> -->
         <!--Table Row 2-->
-        <td>1</td>
+       <!--  <td>1</td>
         <td>Cristiana (la boss)</td>
         <td>beaucoup trop</td>
         <td>22:30</td>
       </tr>
 
-      <tr>
+      <tr> -->
         <!--Table Row 3-->
-        <td>2</td>
+        <!-- <td>2</td>
         <td>Dodo</td>
         <td>1000</td>
         <td>00:15</td>
-      </tr>
+      </tr> -->
 
-      <tr>
-        <!--Table Row 4-->
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-
-    <tfoot>
-      <!--Table Footer-->
-      <tr>
-        <th colspan="2">Total Albums</th>
-        <td colspan="2">77</td>
-      </tr>
-    </tfoot>
+      
+    </tbody>
   </table>
   
   <footer>Even if you're not here, you're still a champion...</footer>
-</body>
-</html>
+
 
 
     <center>
         <img src="/img/nezuko_walking.png" id="nezuko_perso" height="250" width="250">
         <img src="/img/zenitsu.png" id="zenitsu" height="250" width="250">
     </center>
-
+    <script src="/score.js"></script>
   </body>
 </html>
 
