--- a/game.html
+++ b/game.html
@@ -21,16 +21,16 @@
     <h2 class="game_title">Demon Slayer Adventures</h2>
     
     <h3 class="game_instruction">You must avoid the demon !</h3>
+    <div id="chrono">
+      <span class="time">0 h</span> :
+      <span class="time">0 min</span> :
+      <span class="time">0 s</span> :
+      <span class="time">0 ms</span>
+    </div> 
     </center> 
 
     <div class ="canvas">
       <div class="score">00000</div> 
-      <div id="chrono">
-        <span >0 h</span> :
-        <span >0 min</span> :
-        <span >0 s</span> :
-        <span >0 ms</span>
-      </div> 
       <div id="nezuko"></div>
       <div id="obstacle"></div>
     </div>
