--- a/Game/Dragdrop.html
+++ b/Game/Dragdrop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nezuko Adventures</title>
-    <link rel="stylesheet" href="/DragdropCR.css">
+    <link rel="stylesheet" href="/Css/Dragdrop.css">
     <link rel="shortcut icon" href="#" />
     <link href="'http://fonts.cdnfonts.com/css/depixel'" rel="stylesheet">
                 
@@ -36,6 +36,6 @@
 
 <div id="div3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
-  <script src="/DragdropCR.js"></script>
+  <script src="/Game/Dragdrop.js"></script>
   </body>
 </html>
