--- a/Game/alert_box.html
+++ b/Game/alert_box.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="'http://fonts.cdnfonts.com/css/depixel'" rel="stylesheet">
-    <link rel="stylesheet" href="/game.css">
+    <link rel="stylesheet" href="/Css/game.css">
     <title>GAME OVER</title>
 
     <body class="body_alert">
@@ -24,8 +24,8 @@
         <h1>You lose, but don't cry... it's gonna be ok</h1>
         <label>What do you want to do?</label>
         <div class="btns">
-            <a  class="btn2" role="button" href="/game.html">REPLAY</a>
-            <a class="btn1" role="button" href="/hall_of_fame.html" >SCORES</a>
+            <a  class="btn2" role="button" href="/Game/game.html">REPLAY</a>
+            <a class="btn1" role="button" href="/Game/hall_of_fame.html" >SCORES</a>
         </div>
     </div>
     
