--- a/Game/game.html
+++ b/Game/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nezuko Adventures</title>
-    <link rel="stylesheet" href="/game.css">
+    <link rel="stylesheet" href="/Css/game.css">
     <link rel="shortcut icon" href="#" />
     <link href="http://fonts.cdnfonts.com/css/fundead-bb'" rel="stylesheet">
           
@@ -35,7 +35,7 @@
       <div id="obstacle"></div>
     </div>
 
-  <script src="/jeu.js"></script>
+  <script src="/Game/jeu.js"></script>
   </body>
 </html>
 
