--- a/Game/start_page.html
+++ b/Game/start_page.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nezuko Adventures</title>
-    <link rel="stylesheet" href="/game.css">
-    <link rel="stylesheet" href="/your_name.css">
-    <link rel="stylesheet" href="/DragdropCR.css">
+    <link rel="stylesheet" href="/Css/game.css">
+    <link rel="stylesheet" href="/Css/DragdropCR.css">
     <link href="'http://fonts.cdnfonts.com/css/fundead-bb'" rel="stylesheet">
     <link href="'http://fonts.cdnfonts.com/css/depixel'" rel="stylesheet">
           
@@ -29,10 +28,10 @@
       <h1 class="status"></h1>
       <button class="find-state">LOCATION</button>
     </div>
-    <script src="/location.js"></script>
+    <script src="/Game/location.js"></script>
 
-      <a class="find-state" role="button" href="game.html" onclick="play()">PLAY</a>
-      <a class="find-state" role="button" href="hall_of_fame.html">SCORES</a>
+      <a class="find-state" role="button" href="/Game/game.html" onclick="play()">PLAY</a>
+      <a class="find-state" role="button" href="/Game/hall_of_fame.html">SCORES</a>
     </center>
 
 
@@ -57,10 +56,10 @@
       </div>
       </div>
 
-      <a class="find-state" role="button" href="surprise(jquery).html">SURPRISE</a>
+      <a class="find-state" role="button" href="/Game/surprise(jquery).html">SURPRISE</a>
 
 
-  <script src="/DragdropCR.js"></script>
+  <script src="/Game/Dragdrop.js"></script>
     </center>
 
   </body>
