--- a/Game/hall_of_fame.html
+++ b/Game/hall_of_fame.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nezuko Adventures</title>
-    <link rel="stylesheet" href="/game.css">
+    <link rel="stylesheet" href="/Css/game.css">
     <link rel="shortcut icon" href="#" />
     <link href="'http://fonts.cdnfonts.com/css/depixel'" rel="stylesheet">      
  <style>
@@ -33,22 +33,6 @@
     </thead>
 
     <tbody id="tableBody">
-      <!-- <tr> -->
-        <!--Table Row 2-->
-       <!--  <td>1</td>
-        <td>Cristiana (la boss)</td>
-        <td>beaucoup trop</td>
-        <td>22:30</td>
-      </tr>
-
-      <tr> -->
-        <!--Table Row 3-->
-        <!-- <td>2</td>
-        <td>Dodo</td>
-        <td>1000</td>
-        <td>00:15</td>
-      </tr> -->
-
       
     </tbody>
   </table>
@@ -64,7 +48,7 @@
         <img src="/img/nezuko_walking.png" id="nezuko_perso" height="250" width="250">
         <img src="/img/zenitsu.png" id="zenitsu" height="250" width="250">
     </center>
-    <script src="/score.js"></script>
+    <script src="/Game/score.js"></script>
   </body>
 </html>
 
