--- a/Game/surprise(jquery).html
+++ b/Game/surprise(jquery).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surprise</title>
-    <link rel="stylesheet" href="/game.css">
+    <link rel="stylesheet" href="/Css/game.css">
 
     <link href="'http://fonts.cdnfonts.com/css/fundead-bb'" rel="stylesheet">
     <link href="'http://fonts.cdnfonts.com/css/depixel'" rel="stylesheet">
