--- a/Site/description_start.html
+++ b/Site/description_start.html
@@ -46,8 +46,7 @@
                 <h2>Description</h2>
                 <p>Par Cristiana Lima Coelho le 6/04/2022 à 10:00</p>
             </header>
-            <p>Moriko* and the princeless world est un jeu 2D dans lequel le joueur incarne une courageuse princesse qui doit aller sauver son prince ou sa princesse en détresse. Ce/cette dernier.ère s’est fait.e kidnapper par un dragon. Moriko devra se déplacer dans différentes maps pour aller sauver son/sa bien aimé.e </p>
-            <p> *signifie enfant de la forêt en japonais</p>
+            <p>Demon Slayer Adventure est un jeu 2D dans lequel le joueur incarne un personnage tiré du manga Demon Slayer. Son but est d’éviter le démon qui se dirige vers lui à l’aide d’un saut.</p>
         </article>
     </section>
     <aside>
