--- a/Site/journal_de_bord_start.html
+++ b/Site/journal_de_bord_start.html
@@ -54,16 +54,22 @@
                     <th>Auteur</th>
                 </tr>
                 <tr>
-                    <td>31.3/ 3-4.4/ 6.4</td>
-                    <td>~10h</td>
-                    <td>CSS et HTML sitemap</td>
+                    <td>31.3 - 07.06</td>
+                    <td>~15h</td>
+                    <td>CSS et HTML sitemap, fonctionnalité du jeu (en collaboration avec Emilie), fonction drag and drop</td>
                     <td>Cristiana</td>
                 </tr>
                 <tr>
-                    <td>31.3/ 4-5.4</td>
-                    <td>~6h</td>
-                    <td>Maps du jeu (Tiled), Mockup, remplir doc descriptif</td>
+                    <td>31.3 - 07.06</td>
+                    <td>~20h</td>
+                    <td>Menu du jeu, fonctionnalité du jeu (en collaboration avec Cristiana), mise en page du jeu, fonction de géolocalisation, JQuery selector et chain, etc...</td>
                     <td>Emilie</td>
+                </tr>
+                <tr>
+                    <td>31.3 - 07.06</td>
+                    <td>~10h</td>
+                    <td>Mise en page, avancement des fonctionnalités du jeu (en collaboration avec Cristiana et Emilie), avancement du rapport</td>
+                    <td>Doriane</td>
                 </tr>
             </table>
         </article>
