--- a/Site/maquettes_start.html
+++ b/Site/maquettes_start.html
@@ -46,27 +46,21 @@
                 <h2>Maquette visuelle</h2>
                 <p>Par Cristiana Lima Coelho le 6/04/2022 à 10:00</p>
             </header>
-            <p>Dans une plateforme en 2D le personnage se déplace sur la gauche ou sur la droite, il peut également sauter pour atteindre une plateforme ou pour tuer ses ennemis.</p>
+            <p>Dans une plateforme en 2D le personnage est statique, il peut uniquement sauter pour éviter les ennemis qui s’avancent vers lui.
+            </p>
             <personnages>
                 <h3>Personnages</h3>
-                <p>Moriko : personnage principal, protagoniste du jeu dont la mission est de sauver l’élu/e de son cœur.</p>
-                <img id="hero" src="/img/hero.png">
-                <p>Princesse ou prince : Personnage qui s’est fait kidnapper par les monstres, il faut le/la sauver.</p>
-                <img id="prince" src="/img/prince.png">
-                <img id="princesse" src="/img/princesse.png">
-                <p>Monstres : Ennemis qui nous tuent si on les touche, pour les tuer il faut les frapper à l’aide de différentes armes ou leur sauter dessus.</p>
-                <img id="mob1" src="/img/fantome.png">
-                <img id="mob2" src="/img/vampire.png">
-                <img id="mob3" src="/imgs/dragon.png">
+                <p>Nezuko : personnage féminin</p>
+                <img id="hero" src="/img/nezuko_walking.png">
+                <p>Zenitsu : Personnage masculin</p>
+                <img id="prince" src="/img/zenitsu.png">
+                <p>Monstre : Ennemi qui nous tuent si on le touche, il faut donc l’éviter en utilisant la fonction du saut.</p>
+                <img id="mob1" src="/img/no_face_simple.gif">
             </personnages>
             <maps>
-                <h3>Maps</h3>            
-                <p> Le premier niveau se déroule dans la forêt, Moriko devra se déplacer tout en tuant les ennemis sur son passage et éviter les obstacles (mer). D’une fois que tous les ennemis seront tués, une question apparaîtra.Si elle répond juste elle recevra un item qui lui permettra de continuer sa quête,cependant si elle répond elle faux les ennemis re-apparaîtront et elle devra recommencer ce niveau.</p>
-                <img id="map1" src="/img/mapNiv1.png">
-                <p>Ensuite, le deuxième niveau se déroulera dans un château où Moriko devra également tuer tous les monstres tout en évitant les obstacles (pics ou lave). Une fois tous les monstres tués une question apparaîtra et si elle répond juste le mur s’ouvrira et si elle répond ce sera pareil que pour le niveau précédent. Dès lors, elle se retrouvera dans les hall du château. </p>
-                <img id="map2" src="/img/mapNiv2.png">
-                <p>Finalement, dans le hall du château se trouvera notre ennemi final qu’est le dragon du château. Elle aura le choix entre combattre ou parler avec. Si elle choisit de combattre, elle commencera un combat impossible et elle succombera. Si elle choisit de lui parler, une dernière question lui sera posée. Si la réponse est fausse, le jeu complet recommencera, si la réponse est juste son âme sœur sera libérée.</p>
-                <img id="map3" src="/img/mapNiv3.png">
+                <h3>Map</h3>            
+                <p> Le jeu se déroule dans un cadre japonais, avec un temple en perspective.</p>
+                <img id="map1" src="/img/japanese_temple.gif">
             </maps>
         </article>
     </section>
