--- a/Site/journal_de_bord_start.html
+++ b/Site/journal_de_bord_start.html
@@ -44,7 +44,7 @@
         <article>
             <header>
                 <h2>Journal de bord</h2>
-                <p>Par Cristiana Lima Coelho le 6/04/2022 à 10:00</p>
+                <p>Par Doriane Papilloud le 7/06/2022 à 10:00</p>
             </header>
             <table>
                 <tr>
