--- a/Site/maquettes_start.html
+++ b/Site/maquettes_start.html
@@ -44,7 +44,7 @@
         <article>
             <header>
                 <h2>Maquette visuelle</h2>
-                <p>Par Cristiana Lima Coelho le 6/04/2022 à 10:00</p>
+                <p>Par Doriane Papilloud le 7/06/2022 à 10:00</p>
             </header>
             <p>Dans une plateforme en 2D le personnage est statique, il peut uniquement sauter pour éviter les ennemis qui s’avancent vers lui.
             </p>
