--- a/Site/description_start.html
+++ b/Site/description_start.html
@@ -44,7 +44,7 @@
         <article>
             <header>
                 <h2>Description</h2>
-                <p>Par Cristiana Lima Coelho le 6/04/2022 à 10:00</p>
+                <p>Par Doriane Papilloud le 7/06/2022 à 10:00</p>
             </header>
             <p>Demon Slayer Adventure est un jeu 2D dans lequel le joueur incarne un personnage tiré du manga Demon Slayer. Son but est d’éviter le démon qui se dirige vers lui à l’aide d’un saut.</p>
         </article>
